.config/eww/eww.scss
$black: #232627;
$red: #ed1515;
$green: #11d116;
$yellow: #f67400;
$blue: #1d99f3;
$magenta: #9b59b6;
$cyan: #1abc9c;
$white: #fcfcfc;
$grey: #232627;


$bg: rgba(23, 52, 79, 0.5);

* {
    all: unset;
}

/////////////
//  Music  //
/////////////
.music {
    font-family: "Hack Nerd Font";
    background-color: rgba(23, 52, 79, 1);
    border-radius: 8px;
    padding: 2rem;
    font-weight: bold;

    .art-row {
        padding-bottom: 1rem;
    }

    .artist {
        font-size: 24px;
    }

    .title {
        font-size: 18px;
        font-style: italic;
    }

    .album {
        font-weight: normal;
    }

    label {
        padding-bottom: 1rem;
    }
}

/////////////
// Sidebar //
/////////////
.sidebar {
    font-family: "Font Awesome 6 Free";
    background-color: rgba(23, 52, 79, 1);
    border-radius: 8px;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;

    .bottom {
    }

    .top {
        font-size: 18px;
    }
}

.separator {
    font-family: "Hack Nerd Font";
    color: $white;
}

.indicator {
    color: $magenta;

    circular-progress {
        color: $magenta;
        background-color: $cyan;
    }

    .icon {
        padding: 8px;
        font-size: 18px;
        color: $cyan;
    }

    .workspace {
        font-family: "Hack Nerd Font";
    }
}

.urgent {
    color: $yellow;

    button {
        color: $yellow;
    }

    .icon {
        color: $yellow;
    }

    circular-progress {
        background-color: $yellow;
        color: $yellow;
    }
}

.clock {
    label {
        font-size: 18px;
        font-family: "Hack Nerd Font";
    }

    .small {
        font-size: 14px;
    }
}

.workspaces {
    font-family: "Hack Nerd Font";
    color: $white;
    padding: 5;
}

.ws {
    color: $white;
}

.ws-active {
    background-color: $cyan;
    color: $black;
}

.ws-inactive {
    background-color: $grey;
    color: $green;
}

.workspaces label {
    padding: 0 5 0 5;
    border-radius: 8px;
}

.music-bar {
    font-family: "Hack Nerd Font";
    font-size: 18;
}

